dataset1235/2025-2/2947369575/users/2667057248/executions/1003782500_2667036473.log
== RUN (2025-08-27 16:33:29)
-- CODE: 
celcius = float(input())

kelvin = celcius + 273.15

print(round(kelvin, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
303.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 16:31:05)
-- CODE: 
celcius = float(input())

kelvin = celcius + 273.15

print(round(kelvin/2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
147
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
132
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
117
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
187
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
137
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
152
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 16:31:54)
-- CODE: 
celcius = float(input())

kelvin = celcius + 273.15

print(round(kelvin/2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
147
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
132
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
117
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
187
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
137
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
152
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 16:26:35)
-- CODE: 
Kelvin = Celsius + 273.15
print(round(x/2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Kelvin = Celsius + 273.15
             ^^^^^^^
NameError: name 'Celsius' is not defined
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Kelvin = Celsius + 273.15
             ^^^^^^^
NameError: name 'Celsius' is not defined
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Kelvin = Celsius + 273.15
             ^^^^^^^
NameError: name 'Celsius' is not defined
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Kelvin = Celsius + 273.15
             ^^^^^^^
NameError: name 'Celsius' is not defined
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Kelvin = Celsius + 273.15
             ^^^^^^^
NameError: name 'Celsius' is not defined
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Kelvin = Celsius + 273.15
             ^^^^^^^
NameError: name 'Celsius' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 16:26:22)
-- CODE: 
Kelvin=Celsius + 273.15
print(round(x/2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Kelvin=Celsius + 273.15
           ^^^^^^^
NameError: name 'Celsius' is not defined
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Kelvin=Celsius + 273.15
           ^^^^^^^
NameError: name 'Celsius' is not defined
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Kelvin=Celsius + 273.15
           ^^^^^^^
NameError: name 'Celsius' is not defined
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Kelvin=Celsius + 273.15
           ^^^^^^^
NameError: name 'Celsius' is not defined
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Kelvin=Celsius + 273.15
           ^^^^^^^
NameError: name 'Celsius' is not defined
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Kelvin=Celsius + 273.15
           ^^^^^^^
NameError: name 'Celsius' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 16:31:47)
-- CODE: 
celcius = float(input())

kelvin = celcius + 273.15

print(round(kelvin/2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
147
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
132
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
117
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
187
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
137
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
152
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 16:31:34)
-- CODE: 
celcius = float(input())

kelvin = celcius + 273.15

print(round(kelvin/2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
147
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
132
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
117
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
187
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
137
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
152
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 16:34:23)
-- CODE: 
celcius = float(input())

kelvin = celcius + 273.15

print(round(kelvin, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
303.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 16:31:28)
-- CODE: 
celcius = float(input())

kelvin = celcius + 273.15

print(round(kelvin/2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
147
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
132
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
117
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
187
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
137
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
152
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
